# Atlantis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compilation - indev.bat  makefile
game/config/: NPC.cnf  entity_texture.config  history.cnf  item.config  spells.cnf  tiles.config  waifu.cnf
include/SDL_image/: SDL_image.h
include/SDL_mixer/: SDL_mixer.h
old/: Entity.cpp  Entity.hpp  GUI.cpp  GUI.hpp  console.cpp  console.hpp  debugMenu.cpp  debugMenu.hpp  eventManager.cpp  eventManager.hpp  gameManager.cpp  gameManager.hpp  main.cpp  map.cpp  map.hpp  mapManager.cpp  mapManager.hpp  someFunction.cpp  someFunction.hpp
src/: Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  EventHandler.cpp  EventHandler.hpp  EventManager.cpp  EventManager.hpp  GUI.cpp  GUI.hpp  GameItem.cpp  GameItem.hpp  GameItems.cpp  GameItems.hpp  MapItem.cpp  MapItem.hpp  Printable.cpp  Printable.hpp  RenderableItem.cpp  RenderableItem.hpp  RenderableItems.cpp  RenderableItems.hpp  StateMachine.cpp  StateMachine.hpp  console.cpp  console.hpp  debugMenu.cpp  debugMenu.hpp  gameManager.cpp  gameManager.hpp  main.cpp  map.cpp  map.hpp  mapManager.cpp  mapManager.hpp  map_test.cpp  map_test.hpp  option.json  someFunction.cpp  someFunction.hpp
src/assets/: map1.json
src/maps/: test.rc
src/metadata/: atlantis_metadata.rc  atlantis_metadata.res
